# zulip_bot-vc

./: .gitignore  AGENTS.md  README.md  bot_main.py  config.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pylint.yml  run-zulip-bot.yml
core/: __init__.py  audit.py  authz.py  client.py  commands.py  context.py  dispatcher.py  models.py  scheduler.py  status.py
features/: __init__.py  admin_controls.py  anonymous_posting.py  private_access.py
features/admin_controls/: README.md  __init__.py  feature.py
features/anonymous_posting/: README.md  __init__.py  feature.py
features/private_access/: README.md  __init__.py  feature.py
features/welcome/: README.md  __init__.py  feature.py
storage/: __init__.py  db.py  file_store.py
tests/: conftest.py  fakes.py  test_admin_controls.py  test_anonymous_posting.py  test_audit.py  test_authz.py  test_client_events.py  test_commands.py  test_config.py  test_context.py  test_dispatcher.py  test_event_loop.py  test_matching.py  test_models.py  test_private_access.py  test_scheduler.py  test_scheduling.py  test_status.py  test_storage.py  test_welcome.py
utils/: __init__.py  matching.py  scheduling.py
